@@ -24,7 +24,7 @@ define('INSTALL_PATH', realpath(__DIR__ . '/..') . '/' );
 require_once INSTALL_PATH . 'program/include/clisetup.php';
 
 // get arguments
-$opts = rcube_utils::get_opt(array('v' => 'version', 'y' => 'accept'));
+$opts = rcube_utils::get_opt(array('v' => 'version', 'y' => 'accept:bool'));
 
 // ask user if no version is specified
 if (!$opts['version']) {
